sandbox/output
TicketDispenserTest.java:30: error: cannot find symbol
                dispenser.getTurnTicket().getTurnNumber();
                ^
  symbol:   variable dispenser
  location: class TicketDispenserTest
1 error
